<resources>
    <string name="app_name">SnGeoTracker</string>
    <string name="route_map">Маршрут</string>

    <!-- Main page -->
    <string name="start_tracking">Начать запись</string>
    <string name="stop_tracking">Остановить запись</string>
    <string name="show_table">Показать таблицу</string>
    <string name="show_route">Показать маршрут</string>
    <string name="home_road">Дорога домой</string>
    <string name="ok">ОК</string>
    <string name="error_no_location_perm">Приложение остановлено: не выдано разрешение на определение местоположения</string>

    <!-- Menu -->
    <string name="menu_settings">Настройки</string>
    <string name="menu_about">О программе</string>

    <!-- Table of positions -->
    <string name="latitude">Широта</string>
    <string name="longitude">Долгота</string>
    <string name="altitude">Высота</string>
    <string name="accuracy">Точность</string>
    <string name="provider">Провайдер</string>
    <string name="time">Время</string>
    <string name="time2">Время 2</string>
    <string name="speed">Скорость</string>
    <string name="distance">Расстояние</string>
    <string name="m">м</string>
    <string name="location_table">Таблица геолокаций</string>
    <string name="no_locations">Записи геолокаций отсутствуют</string>
    <string name="location_table_title_1">Всего записей:</string>
    <string name="location_table_title_2">. Сделаны с </string>
    <string name="location_table_title_3"> по </string>

    <!-- Strings related to Settings -->

    <string name="pref_header_general">Общие</string>
    <string name="pref_accuracy_threshold">Точность записи местоположения (м)</string>
    <string name="pref_route_accuracy_threshold">Точность показа местоположения (м)</string>
    <string name="pref_min_time">Время между обновлениями (сек)</string>
    <string name="pref_min_distance">Расстояние между обновлениями (м)</string>
    <string name="pref_fused">Fused</string>
    <string name="pref_fused_summary">Fused Location Provider</string>
    <string name="pref_show_all_columns">Показывать все столбцы</string>
    <string name="pref_show_all_columns_summary">
        Показывать дополнительные столбцы (высоту, скорость, время прихода сигнала) в таблице геолокаций
    </string>

    <string name="provider_network">Network</string>
    <string name="provider_gps">GPS</string>
    <string-array name="pref_providers">
        <item>@string/provider_gps</item>
        <item>@string/provider_network</item>
    </string-array>

    <string name="pref_title_map">Карты</string>
    <string name="map_google">Google</string>
    <string name="map_yandex">Яндекс</string>
    <string name="map_osm">OpenStreetMap</string>
    <string-array name="map_array">
        <item>@string/map_google</item>
        <item>@string/map_yandex</item>
        <item>@string/map_osm</item>
    </string-array>

    <!-- Home road -->
    <string name="location">Координаты</string>
    <string name="to_home">До дома</string>
    <string name="to_work">До работы</string>
    <string name="na">N/A</string>
    <string name="distance_format">%7.3f &#x00B1; %.3f  км</string>
</resources>
