<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_gravity="top|center_horizontal"/>

    <LinearLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tableTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/tblLocations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="*"
                android:stretchColumns="*">

                <TableRow
                    android:id="@+id/columnHeaders"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/deep_teal_500"
                    android:gravity="center_horizontal"
                    android:paddingBottom="3dp"
                    android:paddingTop="3dp">

                    <TextView
                        android:id="@+id/hdrProvider"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/provider"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/hdrLatitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/latitude"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/hdrLongitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/longitude"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/hdrAltitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/altitude"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/hdrAccuracy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/accuracy"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/hdrTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/time"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/hdrTime2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/time2"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/hdrSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/speed"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold"
                        android:visibility="gone"/>

                </TableRow>

            </TableLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>
