<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="0,1"
    tools:context="sne.geotracker.HomeRoadActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/lblLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"/>

        <TextView
            android:id="@+id/txtLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            tools:text="10.123, 20.987"/>

        <TextView
            android:id="@+id/txtClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="10sp"
            tools:text="|"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/lblToHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_home"/>

        <TextView
            android:id="@+id/txtToHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:textStyle="bold"
            tools:text="10 км"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/lblToWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_work"/>

        <TextView
            android:id="@+id/txtToWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="TextView"
            android:textStyle="bold"
            tools:text="20 км"/>
    </TableRow>

</TableLayout>
